# haskell-tests

./: CHANGELOG.md  haskell-project-test.cabal
app/: Main.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
dist-newstyle/packagedb/ghc-9.2.7/: haskell-project-test-0.1.0.0-inplace.conf  package.cache
src/: Dados.hs  Trabalho_1.hs  Trabalho_2.hs
src/Trabalho_3/Q1/: AbsL1.hs  Interpreter.hs
src/Trabalho_3/Q2/: AbsL1.hs  Interpreter.hs
src/Trabalho_3/Q3/: AbsL1.hs  Interpreter.hs
src/Trabalho_3/Q4/: AbsL1.hs  Interpreter.hs
src/Trabalho_3/Q5/: AbsL1.hs  Interpreter.hs
src/Trabalho_4/: AbsLOO.hs  PrintLOO.hs  Typechecker.hs
testes/: Testes.hs
testes/Trabalho_3/: TestesQ1.hs  TestesQ2.hs  TestesQ3.hs  TestesQ4.hs  TestesQ5.hs
testes/Trabalho_4/: TestesQ1.hs  TestesQ2.hs  TestesQ3.hs  TestesQ4.hs
