cabal-version:      2.4
name:               haskell-project-test
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Victor André
maintainer:         victorandre957@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules:  Trabalho_2 Dados

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.16.4.0
    hs-source-dirs:   src
    default-language: Haskell2010

executable haskell-project-test
    Type:                     exitcode-stdio-1.0
    Main-is:                  Testes.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:            Main.hs

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.16.4.0,
        hspec,
        haskell-project-test

    hs-source-dirs:   testes
    default-language: Haskell2010

-- executable haskell-project-test
--     Main-is:                  Main.hs

--     -- Modules included in this executable, other than Main.
--     -- other-modules:

--     -- LANGUAGE extensions used by modules in this package.
--     -- other-extensions:
--     build-depends:
--         base ^>=4.16.4.0,
--         hspec,
--         haskell-project-test

--     hs-source-dirs:   app
--     default-language: Haskell2010